// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chat tests Chat render correctly 1`] = `
<div>
  <span />
   
   
  <span>
    <img
      className="mod"
      height="18px"
      src="https://s3-us-west-1.amazonaws.com/twitchchat/mod.png"
      width="18px"
    />
  </span>
  <span>
    <img
      className="sub"
      height="18px"
      src="https://s3-us-west-1.amazonaws.com/twitchchat/sub.png"
      width="18px"
    />
  </span>
  <span
    className="Chat__Username-sc-11hxeqq-0 jwgTiW"
  >
     
    chiquita_bananna
  </span>
  :
   
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
  />
</div>
`;

exports[`ChatBox tests ChatBox render correctly 1`] = `
<div
  className="ChatBox__ChatBoxStyle-sc-8d4jv0-0 exzOIu"
  onScroll={[Function]}
>
  <div>
    <span />
     
     
    <span>
      <img
        className="mod"
        height="18px"
        src="https://s3-us-west-1.amazonaws.com/twitchchat/mod.png"
        width="18px"
      />
    </span>
    <span>
      <img
        className="sub"
        height="18px"
        src="https://s3-us-west-1.amazonaws.com/twitchchat/sub.png"
        width="18px"
      />
    </span>
    <span
      className="Chat__Username-sc-11hxeqq-0 jwgTiW"
    >
       
      chiquita_bananna
    </span>
    :
     
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": undefined,
        }
      }
    />
  </div>
  <div>
    <span />
     
     
    <span>
      <img
        className="mod"
        height="18px"
        src="https://s3-us-west-1.amazonaws.com/twitchchat/mod.png"
        width="18px"
      />
    </span>
    <span>
      <img
        className="sub"
        height="18px"
        src="https://s3-us-west-1.amazonaws.com/twitchchat/sub.png"
        width="18px"
      />
    </span>
    <span
      className="Chat__Username-sc-11hxeqq-0 jwgTiW"
    >
       
      A_Seagull
    </span>
    :
     
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": undefined,
        }
      }
    />
  </div>
</div>
`;

exports[`ChatContainer tests ChatContainer render correctly 1`] = `
<div
  className="ChatContainer__App-hd0om2-0 ccIdBA"
>
  <div
    className="ChatContainer__Header-hd0om2-1 dXMVrm"
  >
    Chat On Videos
  </div>
  <div
    className="ChatBox__ChatBoxStyle-sc-8d4jv0-0 exzOIu"
    onScroll={[Function]}
  />
  <div
    className="PostMessageBox__TextBoxContainer-f9nk4c-0 hqfwsX"
  >
    <div
      className="PostMessageBox__TextBox-f9nk4c-1 cwOWzG"
    >
      <textarea
        className="PostMessageBox__TextArea-f9nk4c-2 TEyAC"
        id="textBox"
        placeholder="Post a message"
      />
      <div>
        <img />
      </div>
    </div>
    <div
      className="PostMessageBox__PostButtonContainer-f9nk4c-3 gPnsfj"
    >
      <button
        className="PostMessageBox__PostButton-f9nk4c-4 FsBuX"
        id="postButton"
        onClick={[Function]}
      >
        Chat
      </button>
    </div>
  </div>
</div>
`;

exports[`PostMessageBox tests PostMessageBox render correctly 1`] = `
<div
  className="PostMessageBox__TextBoxContainer-f9nk4c-0 hqfwsX"
>
  <div
    className="PostMessageBox__TextBox-f9nk4c-1 cwOWzG"
  >
    <textarea
      className="PostMessageBox__TextArea-f9nk4c-2 TEyAC"
      id="textBox"
      placeholder="Post a message"
    />
    <div>
      <img />
    </div>
  </div>
  <div
    className="PostMessageBox__PostButtonContainer-f9nk4c-3 gPnsfj"
  >
    <button
      className="PostMessageBox__PostButton-f9nk4c-4 FsBuX"
      id="postButton"
      onClick={[Function]}
    >
      Chat
    </button>
  </div>
</div>
`;
